tests/baselines/reference/objectFromEntries.errors.txt
tests/cases/compiler/objectFromEntries.ts(8,7): error TS2322: Type 'readonly [readonly ["a", 1], readonly ["b", 2], readonly ["c", 3]]' is not assignable to type 'readonly [string, number][]'.
  Type 'readonly ["a", 1] | readonly ["b", 2] | readonly ["c", 3]' is not assignable to type '[string, number]'.
    The type 'readonly ["a", 1]' is 'readonly' and cannot be assigned to the mutable type '[string, number]'.


==== tests/cases/compiler/objectFromEntries.ts (1 errors) ====
    const o = Object.fromEntries([['a', 1], ['b', 2], ['c', 3]]);
    const o2 = Object.fromEntries(new URLSearchParams());
    const o3 = Object.fromEntries(new Map([[Symbol("key"), "value"]]));
    
    const frozenArray = Object.freeze([['a', 1], ['b', 2], ['c', 3]]);
    const o4 = Object.fromEntries(frozenArray);
    
    const frozenArray2: readonly [string, number][] = Object.freeze([['a', 1], ['b', 2], ['c', 3]]);
          ~~~~~~~~~~~~
!!! error TS2322: Type 'readonly [readonly ["a", 1], readonly ["b", 2], readonly ["c", 3]]' is not assignable to type 'readonly [string, number][]'.
!!! error TS2322:   Type 'readonly ["a", 1] | readonly ["b", 2] | readonly ["c", 3]' is not assignable to type '[string, number]'.
!!! error TS2322:     The type 'readonly ["a", 1]' is 'readonly' and cannot be assigned to the mutable type '[string, number]'.
    const o5 = Object.fromEntries(frozenArray2);
    